// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default renderer: prompt should render a prompt: WdiO5CUfBLf5hMlp9sPct5973YhRlnLz-exit 1`] = `[]`;

exports[`default renderer: prompt should render a prompt: WdiO5CUfBLf5hMlp9sPct5973YhRlnLz-stderr 1`] = `[]`;

exports[`default renderer: prompt should render a prompt: WdiO5CUfBLf5hMlp9sPct5973YhRlnLz-stdout 1`] = `
[
  "◼ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.

[36m?[39m [1mGive me some input.[22m [2m‣[22m [46m[30m[30m [39m[30m[39m[49m
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

[32m✔[39m [1mGive me some input.[22m [2m·[22m [32mtest[39m
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.



",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
",
  "[2K[1A[2K[G",
  "✔ This task will execute.
",
]
`;

exports[`default renderer: prompt should render multiple prompt: ZyUB9J2StmYMasXkHsMgjyszR4n0vvi9-exit 1`] = `[]`;

exports[`default renderer: prompt should render multiple prompt: ZyUB9J2StmYMasXkHsMgjyszR4n0vvi9-stderr 1`] = `[]`;

exports[`default renderer: prompt should render multiple prompt: ZyUB9J2StmYMasXkHsMgjyszR4n0vvi9-stdout 1`] = `
[
  "◼ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.

[36m?[39m [1mGive me some input.[22m [2m‣[22m [46m[30m[30m [39m[30m[39m[49m
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

[32m✔[39m [1mGive me some input.[22m [2m·[22m [32mtest[39m
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.



",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

[36m?[39m [1mGive me more input.[22m [2m…[22m 
[36m▸[39m [36m[4mtest1[24m[39m
  test2
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

[32m✔[39m [1mGive me more input.[22m [2m·[22m [36mtest1[39m
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.



",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
",
  "[2K[1A[2K[G",
  "✔ This task will execute.
",
]
`;

exports[`default renderer: prompt should run cancel callback: HaNF6mQO2FvhOQe4bPQRBRhk9MS9lx9w-exit 1`] = `[]`;

exports[`default renderer: prompt should run cancel callback: HaNF6mQO2FvhOQe4bPQRBRhk9MS9lx9w-stderr 1`] = `[]`;

exports[`default renderer: prompt should run cancel callback: HaNF6mQO2FvhOQe4bPQRBRhk9MS9lx9w-stdout 1`] = `
[
  "◼ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.

[36m?[39m [1mGive me some input.[22m [2m‣[22m [46m[30m[30m [39m[30m[39m[49m
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

[35m✖[39m [1mGive me some input.[22m [2m·[22m 
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.



",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✖ This task will execute.
",
  "[2K[1A[2K[G✖ Cancelled prompt.
",
  "[2K[1A[2K[G",
  "✖ Cancelled prompt.
",
]
`;

exports[`default renderer: prompt should use skip enquirer: 8QRF9bQEdSKkH62yUKbteKnrpevTbGan-exit 1`] = `[]`;

exports[`default renderer: prompt should use skip enquirer: 8QRF9bQEdSKkH62yUKbteKnrpevTbGan-stderr 1`] = `[]`;

exports[`default renderer: prompt should use skip enquirer: 8QRF9bQEdSKkH62yUKbteKnrpevTbGan-stdout 1`] = `
[
  "◼ This task will execute.
",
  "[2K[1A[2K[G◼ This task will execute.
◼ Another task.
",
  "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ Another task.
",
  "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ Another task.

[36m?[39m [1mGive me some input.[22m [2m‣[22m [46m[30m[30m [39m[30m[39m[49m
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G↓ This task will execute. [SKIPPED]
◼ Another task.
",
  "[2K[1A[2K[1A[2K[G↓ This task will execute. [SKIPPED]
❯ Another task.
",
  "[2K[1A[2K[1A[2K[G↓ This task will execute. [SKIPPED]
✔ Another task.
",
  "[2K[1A[2K[1A[2K[G",
  "↓ This task will execute. [SKIPPED]
✔ Another task.
",
]
`;

exports[`default renderer: prompt should use the passed in enquirer: t3VXfqT0crsCYRzqYYWZGllN6oNARZcn-exit 1`] = `[]`;

exports[`default renderer: prompt should use the passed in enquirer: t3VXfqT0crsCYRzqYYWZGllN6oNARZcn-stderr 1`] = `[]`;

exports[`default renderer: prompt should use the passed in enquirer: t3VXfqT0crsCYRzqYYWZGllN6oNARZcn-stdout 1`] = `
[
  "◼ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.

[36m?[39m [1mGive me some input.[22m [2m‣[22m [46m[30m[30m [39m[30m[39m[49m
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

[32m✔[39m [1mGive me some input.[22m [2m·[22m [32mtest[39m
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.



",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
",
  "[2K[1A[2K[G",
  "✔ This task will execute.
",
]
`;
